Fix missing scrollbars for abcjs overflow (#1469)

--- a/src/components/markdown-renderer/replace-components/abc/abc.scss
+++ b/src/components/markdown-renderer/replace-components/abc/abc.scss
@@ -4,8 +4,17 @@
  * SPDX-License-Identifier: AGPL-3.0-only
  */
 
+
 .abcjs-score {
   @import "../../../../style/variables.scss";
+
+  .markdown-body & {
+    overflow-x: auto !important;
+  }
+
+  & > svg {
+    max-width: unset !important;
+  }
 
   &, text {
     font-family: $font-family-base;
